adding dynamic html via js

--- a/starter-code/css/style.css
+++ b/starter-code/css/style.css
@@ -11,46 +11,56 @@ img{
   display: block;
   margin-left: auto;
   margin-right: auto;
+  width: 100%;
 }
 
 h1 {
-  font-family: 'Londrina Shadow', cursive;
+font-family: 'Rock Salt', cursive;
   text-align: center;
-  font-size: 75px;
-  color: #aaaaaa;
-  margin: 60px 0 0 0;
+  font-size: 112px;
+  color: #ffbf00;
+  margin: -20px 0px 0px 54px;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 h2 {
-  font-family: 'times new roman', cursive;
+  font-family: 'Covered By Your Grace', cursive;
   text-align: center;
   color: #ffffff;
-  margin: 0px 0 70px 0;
-  font-size: 18px;
+  font-size: 40px;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+
 }
 
 h3 {
-  font-family: 'times new roman', cursive;
+  font-family: 'Rock Salt', cursive;
   text-align: center;
   color: #bbbbbb;
+  font-size: 48px;
 }
 
 p {
   color: rgba(255,255,255,1);
-  font-family: 'lucida';
+  font-family: 'Shadows Into Light', cursive;
   padding: 50px;
   line-height: 28px;
-  text-align: auto;
-  font-size:25px;
-  text-decoration: none:
+  text-align: center;
+  font-size: 42px;
 }
-
+.heading {
+  background-image: url('http://infinitemind.io/wp-content/uploads/2014/10/Sixty-and-Me-Keep-Your-Brain-Healthy-with-these-Awesome-Brain-Games-Sites-670x325.jpg');
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  height: 500px;
+}
 .social{
   float: left;
   display: block;
+  height: 35px;
+  width: 35px;
 }
 
-.board{
+#board{
   height:50%;
   width: 50%;
   display: inline-block;
@@ -89,12 +99,13 @@ nav{
 
 nav a {
 background-color:#ffbf00;
-color: white;
-padding:35px;
-margin:auto;
+color: black;
+padding: 35px;
+margin: auto;
 display: block;
 float: left;
-font-family: 'Londrina Shadow', cursive;
+font-family: 'Rock Salt', cursive;
+font-size: 25px;
 }
 
 nav a:hover{
