--- a/starter-code/css/style.css
+++ b/starter-code/css/style.css
@@ -7,15 +7,13 @@ body {
   text-align: center;
 }
 
-img{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+img {
+  display: inline-block;
   width: 100%;
 }
 
 h1 {
-font-family: 'Rock Salt', cursive;
+  font-family: 'Rock Salt', cursive;
   text-align: center;
   font-size: 112px;
   color: #ffbf00;
@@ -29,7 +27,6 @@ h2 {
   color: #ffffff;
   font-size: 40px;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-
 }
 
 h3 {
@@ -47,15 +44,17 @@ p {
   text-align: center;
   font-size: 42px;
 }
+
 .heading {
   background-image: url('http://infinitemind.io/wp-content/uploads/2014/10/Sixty-and-Me-Keep-Your-Brain-Healthy-with-these-Awesome-Brain-Games-Sites-670x325.jpg');
   background-repeat: no-repeat;
   background-size: 100% 100%;
   height: 500px;
 }
+
 .social{
   float: left;
-  display: block;
+  display: inline-block;
   height: 35px;
   width: 35px;
 }
@@ -67,13 +66,14 @@ p {
 }
 
 .card{
-	  background: #35355a;
-  	width: 150px;
-	  height: 200px;
-	  border: 3px solid black;
-	  display: block;
-    margin: 8%;
-    float: left;
+  background: #35355a;
+  width: 150px;
+  height: 200px;
+	border: 3px solid black;
+  display: block;
+  margin: 8%;
+  float: left;
+  border-radius: 10px;
 }
 
 span{
@@ -81,12 +81,12 @@ span{
 }
 
 .clearfix:after {
-        visibility: hidden;
-        display: block;
-        content: " ";
-        clear: both;
-        height: 0;
-        font-size: 0;
+  visibility: hidden;
+  display: block;
+  content: " ";
+  clear: both;
+  height: 0;
+  font-size: 0;
 }
 
 nav{
@@ -98,18 +98,18 @@ nav{
 }
 
 nav a {
-background-color:#ffbf00;
-color: black;
-padding: 35px;
-margin: auto;
-display: block;
-float: left;
-font-family: 'Rock Salt', cursive;
-font-size: 25px;
+  background-color:#ffbf00;
+  color: black;
+  padding: 35px;
+  margin: auto;
+  display: block;
+  float: left;
+  font-family: 'Rock Salt', cursive;
+  font-size: 25px;
 }
 
 nav a:hover{
-background-color: #808080;
+  /*background-color: #808080;*/
 }
 
 footer {
