--- a/starter-code/css/style.css
+++ b/starter-code/css/style.css
@@ -109,10 +109,17 @@ nav a {
 }
 
 nav a:hover{
-  /*background-color: #808080;*/
+  background-color: #808080;
 }
 
 footer {
   text-align: center;
   background-color: white;
+}
+
+#restart {
+	/*border: 3px solid black;*/
+  display: block;
+  /*margin: 8%;*/
+  /*float: left;*/
 }
